playing with bitbucket pipelines

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,12 @@
-image: parsys/python2-python3-pil-supervisord-redis
+image: maven:3.3.9
 
 pipelines:
   default:
     - step:
         caches:
           - pip
-        script: 
+        script:
+          - apt-get update
+          - apt-get install -y python2 python3 pip
           - pip install -U tox
           - tox
