--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ envlist =
     py27,
     py34,
     py35,
-    coverage
+    coverage,
+    doctest
 
 [testenv]
 usedevelop = True
@@ -13,7 +14,7 @@ deps =
     pdbpp
     pytest
     rpdb
-    yattag
+
 commands =
     py.test -x {posargs}
 
@@ -30,10 +31,20 @@ deps =
     pdbpp
     pytest
     rpdb
-    yattag
+
 setenv =
     COVERAGE_PROCESS_START={toxinidir}/.coveragerc
 commands=
     sh -c 'echo "import coverage; coverage.process_startup()" > {envsitepackagesdir}/../sitecustomize.py'
     coverage run -m pytest tests
     coverage report -m
+
+
+[testenv:doctest]
+changedir=docs
+whitelist_externals =
+    make
+deps =
+    sphinx
+commands=
+    make doctest
