--- a/tox.ini
+++ b/tox.ini
@@ -38,10 +38,12 @@ commands=
 
 
 [testenv:doctest]
+deps =
+    bs4
+    sphinx
+    lxml
 changedir=docs
 whitelist_externals =
     make
-deps =
-    sphinx
 commands=
     make doctest
