--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,11 @@ include .coveragerc
 include LICENSE
 include README.rst
 include tox.ini
+exclude bitbucket-pipelines.yml
+exclude docs/Makefile
+
+exclude tests
+recursive-exclude tests *
 
 recursive-include docs *.py
 recursive-include docs *.rst
