--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = 
+    check,
     py27,
     py34,
     py35,
@@ -17,6 +18,17 @@ deps =
 
 commands =
     py.test -x {posargs}
+
+[testenv:check]
+deps =
+    docutils
+    flake8
+    check-manifest
+commands =
+    check-manifest
+    python setup.py check --strict --metadata --restructuredtext
+    flake8 prophy prophyc setup.py
+
 
 [testenv:coverage]
 usedevelop=True
