Fixing FLAKE8 configuration, making it happy

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
 commands =
     check-manifest
     python setup.py check --strict --metadata --restructuredtext
-    flake8 prophy prophyc setup.py
+    flake8 yawrap tests
 
 
 [testenv:coverage]
