--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[flake8]
+max-line-length = 120
+ignore = C812, C815
+    #  C812 missing trailing comma
+    #  C815 missing trailing comma in Python 3.5+
+
 [bdist_wheel]
 universal = 1
 
