fixing coverage measurement

--- a/tox.ini
+++ b/tox.ini
@@ -4,50 +4,40 @@ envlist =
     py27,
     py34,
     py35,
-    coverage,
     doctest
 
 [testenv]
 usedevelop = True
 deps =
     bs4
+    coverage
     lxml
     pdbpp
     pytest
+    pytest-cov
+    pytest-mock>=1.5.0
     rpdb
 
 commands =
-    py.test -vv -x {posargs}
+    py.test -vv -x {posargs} --cov=yawrap --cov-append --cov-report=term-missing
 
 [testenv:check]
 deps =
     docutils
     flake8
     check-manifest
+    coverage
 commands =
     check-manifest
     python setup.py check --strict --metadata --restructuredtext
     flake8 yawrap tests
+    coverage erase
 
+[testenv:py27]
+basepython = python2.7
 
-[testenv:coverage]
-usedevelop=True
-changedir=.
-whitelist_externals =
-    sh
-deps =
-    bs4
-    coverage
-    lxml
-    pytest
-
-setenv =
-    COVERAGE_PROCESS_START={toxinidir}/.coveragerc
-commands=
-    sh -c 'echo "import coverage; coverage.process_startup()" > {envsitepackagesdir}/../sitecustomize.py'
-    coverage run -m pytest tests
-    coverage report -m
-
+[testenv:py34]
+basepython = python3.4
 
 [testenv:doctest]
 deps =
