sorted lines in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
+*.egg
+*.egg-info/
+*.pyc
+.Python
+.cache
+.coverage
+.installed.cfg
 .project
 .pydevproject
+.pypirc
+.pytest_cache
 .settings
-*.pyc
-tests/out/*
-.cache
-htmlcov/*
-.coverage
 .tox
-docs/build
 build
-.Python
-env/
 develop-eggs/
 dist/
+docs/build
 eggs/
-*.egg-info/
-.installed.cfg
-*.egg
-.pypirc
-
+env/
+htmlcov/*
+tests/out/*
