--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
     rpdb
 
 commands =
-    py.test -vv -x {posargs} --cov=yawrap --cov-append --cov-report=term-missing
+    py.test -vv {posargs} --cov=yawrap --cov-append --cov-report=term-missing
 
 [testenv:check]
 deps =
