adding pypy compatibility (needed to remove problematic lxml dependency)

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     py34,
     py35,
     py36,
+    pypy,
     doctest
 
 [testenv]
@@ -12,7 +13,6 @@ usedevelop = True
 deps =
     bs4
     coverage
-    lxml
     pdbpp
     pytest
     pytest-cov
@@ -38,7 +38,6 @@ commands =
 deps =
     bs4
     sphinx
-    lxml
 changedir=docs
 whitelist_externals =
     make
