--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,11 @@ sudo: false
 matrix:
   include:
     - python: '2.7'
-      env: TOXENV=check,doctest
+      env: TOXENV=check,py27,doctest
     - python: '3.5'
-      env: TOXENV=check,doctest
-    - python: '2.7'
-      env: TOXENV=py27
+      env: TOXENV=check,py35,doctest
     - python: '3.4'
       env: TOXENV=py34
-    - python: '3.5'
-      env: TOXENV=py35
     - python: '3.6'
       env: TOXENV=py36
     - python: 'pypy'
