Adding py37 and gitlab CI config.

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,7 @@
 [tox]
 envlist = 
-    check,
-    py27,
-    py34,
-    py35,
-    py36,
-    pypy,
-    pypy3.5,
+    check{27,36},
+    py{27,34,35,36,37,py,py3},
     doctest
 
 [testenv]
@@ -23,19 +18,27 @@ deps =
 commands =
     py.test -vv {posargs} --cov=yawrap --cov-append --cov-report=term-missing
 
-[testenv:check]
+[testenv:check27]
+basepython = python2.7
+skipsdist=True
 deps =
     docutils
     flake8
     check-manifest
-    coverage
 commands =
-    coverage erase
     flake8 yawrap tests
     check-manifest
     python setup.py check --strict --metadata --restructuredtext
 
+[testenv:check36]
+basepython = python3.6
+skipsdist=True
+deps = {[testenv:check27]deps}
+commands = {[testenv:check27]commands}
+
+
 [testenv:doctest]
+skipsdist=True
 deps =
     bs4
     sphinx
