Adding py37 and pypy3 to trove classifiers. Fixed failing gitlab pipelines. Bumpversion to 0.4.3.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist = 
     check{27,36},
     py{27,34,35,36,37,py,py3},
-    doctest
+    doctest,
+	build
 
 [testenv]
 usedevelop = True
@@ -47,3 +48,14 @@ whitelist_externals =
     make
 commands=
     make doctest
+
+    
+[testenv:build]
+basepython = python3
+skipsdist = True
+skip_install = true
+deps =
+    wheel
+    setuptools
+commands =
+    python setup.py sdist bdist_wheel --universal
