Adopting to new pytest and flake8 packages. Fixing minor code style issues.

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = 
+envlist =
     check{27,36},
     py{27,34,35,36,37,py,py3},
     doctest,
-	build
+    build
 
 [testenv]
-usedevelop = True
+usedevelop = true
 deps =
     bs4
     coverage
@@ -21,7 +21,7 @@ commands =
 
 [testenv:check27]
 basepython = python2.7
-skipsdist=True
+skipsdist = true
 deps =
     docutils
     flake8
@@ -33,26 +33,26 @@ commands =
 
 [testenv:check36]
 basepython = python3.6
-skipsdist=True
+skipsdist = true
 deps = {[testenv:check27]deps}
 commands = {[testenv:check27]commands}
 
 
 [testenv:doctest]
-skipsdist=True
+skipsdist = true
 deps =
     bs4
     sphinx
-changedir=docs
+changedir = docs
 whitelist_externals =
     make
-commands=
+commands =
     make doctest
 
-    
+
 [testenv:build]
 basepython = python3
-skipsdist = True
+skipsdist = true
 skip_install = true
 deps =
     wheel
